feat(admin): manage mediawiki search profiles
